--- a/render.html
+++ b/render.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 
 <html>
 <head>
   <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src = "mapgen.js"></script>
+  <script src = "javascript/mapgen.js"></script>
 </head>
 <body>
   <canvas id = "canvas">Your browser doesn't support canvas</canvas>
