--- a/render.html
+++ b/render.html
@@ -10,6 +10,9 @@
   <canvas id = "canvas2"></canvas>
   <canvas id = "canvas3"></canvas>
   <canvas id = "canvas4"></canvas>
+  <canvas id = "canvas5"></canvas>
+  <canvas id = "canvas6"></canvas>
+
 </body>
 
 </html>
