--- a/render.html
+++ b/render.html
@@ -12,7 +12,7 @@
   <canvas id = "canvas4"></canvas>
   <canvas id = "canvas5"></canvas>
   <canvas id = "canvas6"></canvas>
-
+  <canvas id = "canvas7"></canvas>
 </body>
 
 </html>
